--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemon": "^1.19.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.1.1"
   },
   "browserslist": [
     ">0.2%",
