--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.3",
     "eslint": "^6.1.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "http": "0.0.0",
     "init-package-json": "^1.10.3",
     "jsonwebtoken": "^8.5.1",
