--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.5",
     "eslint": "^6.1.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
@@ -32,6 +33,7 @@
     "init-package-json": "^1.10.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
