--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.1.1"
+    "react-scripts": "^3.1.1",
+    "styled-components": "^4.2.0"
   },
   "browserslist": [
     ">0.2%",
