Fit-026 adding session template

--- a/package.json
+++ b/package.json
@@ -53,5 +53,7 @@
       "build/**"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2"
+  }
 }
