--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "nodemon": "^1.19.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.2.0"
   },
   "browserslist": [
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2"
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "redux-devtools": "^3.5.0"
   }
 }
