--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "init": "node scripts/init.js",
     "test": "react-scripts test",
     "build": "react-scripts build",
+    "start": "nodemon api/server.js --ignore src/",
+    "server": "nodemon api/server.js --ignore src/",
+    "heroku-postbuild": "npm install && npm run build",
     "start:server": "nodemon api/server.js --ignore client",
     "start:client": "react-scripts start",
     "build:client": "react-scripts build"
