change homepage and repo url

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HackerYou/project-repo.git"
+    "url": "git+https://github.com/asucarlos/flexbit.git"
   },
   "bugs": {
     "url": "https://github.com/HackerYou/project-repo/issues"
   },
-  "homepage": "https://github.com/HackerYou/project-repo#readme"
+  "homepage": "https://infinite-gorge-80660.herokuapp.com/"
 }
